po 1 peer review

--- a/A-What you need to know/License.htm
+++ b/A-What you need to know/License.htm
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta charset="utf-8" /><title>License</title>
+        <meta charset="utf-8" /><title>Licence</title>
         <link href="../Skins/Default/Stylesheets/Slideshow.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
         <link href="../Skins/Default/Stylesheets/TextEffects.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
         <link href="../Skins/Default/Stylesheets/Topic.css" rel="stylesheet" type="text/css" data-mc-generated="True" />
@@ -214,8 +214,8 @@
                                             </div>
                                         </div>
                                         <div role="main" id="mc-main-content">
-                                            <h1>License</h1>
-                                            <p>When is a license is required</p>
+                                            <h1>Licence</h1>
+                                            <p>When a licence is required</p>
                                             <div class="Summary">
                                                 <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
                                                 <p>Certain types of business activity require a consent of the relevant authority. But before you apply for such a consent, you need to register your business.</p>
@@ -227,12 +227,12 @@
                                             <ul>
                                                 <li style="text-align: justify;">a licence</li>
                                                 <li style="text-align: justify;">a permit</li>
-                                                <li style="text-align: justify;">an entry in the register of regulated activities.</li>
+                                                <li style="text-align: justify;">an entry in the register of regulated activities</li>
                                             </ul>
                                             <p style="text-align: justify;">Additionally, in the case of certain types of activities, you will need a certificate of relevant qualifications. This applies to certain professions that require specific qualifications or authorisation to practice a given profession, such as a property appraiser, a lawyer, an architect or a tax advisor. In practice, such certificate of qualifications has the same legal consequences as a permit – it means that you are authorised to run a specific business and possess the required qualifications.</p>
-                                            <h2>A license</h2>
+                                            <h2>A licence</h2>
                                             <p style="text-align: justify;">This is the most stringent requirement. It applies to activities that are crucial from the point of view of the state, its security, and economics.</p>
-                                            <p style="text-align: justify;">The general categories of activities that require a license are:</p>
+                                            <p style="text-align: justify;">The general categories of activities that require a licence are:</p>
                                             <ul>
                                                 <li style="text-align: justify;">mining</li>
                                                 <li style="text-align: justify;">production of and trade in weapons</li>
@@ -242,9 +242,9 @@
                                                 <li style="text-align: justify;">running casinos</li>
                                                 <li style="text-align: justify;">air transport</li>
                                             </ul>
-                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a license. The detailed list of activities for which a license is required is available <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>. </p>
+                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a licence. The detailed list of activities for which a licence is required is available <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>. </p>
                                             <h2>A permit</h2>
-                                            <p style="text-align: justify;">A given activity requires a permit when it is so stated in relevant legal regulations. A permit is issued, when a potential business person is found to have abilities and technical and organizational capacities to run a particular type of business. This means that specific conditions specified by law must be met..</p>
+                                            <p style="text-align: justify;">A given activity requires a permit when it is so stated in relevant legal regulations. A permit is issued, when a potential business person is found to have abilities and technical and organizational capacities to run a particular type of business. This means that specific conditions determined by law must be met.</p>
                                             <p style="text-align: justify;">A permit is issued in the form of an administrative decision that may introduce special conditions to be met.</p>
                                             <div class="Remember">
                                                 <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span><![CDATA[  ]]></p>
@@ -292,7 +292,7 @@
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
                                                 <p>1.	Check if the activity that you plan to run requires some form of consent.</p>
                                                 <p>2.	Consult the relevant websites or documents.</p>
-                                                <p>3.	Once you registered your business, you will need to apply the relevant consent.</p>
+                                                <p>3.	Once you registered your business, you will need to apply for the relevant consent.</p>
                                             </div>
                                             <p>&#160;</p>
                                         </div>
