--- a/A-What you need to know/Types of business activity.htm
+++ b/A-What you need to know/Types of business activity.htm
@@ -215,7 +215,7 @@
                                             </div>
                                         </div>
                                         <div role="main" id="mc-main-content">
-                                            <h1>Types of economic activity</h1>
+                                            <h1>Types of business activity</h1>
                                             <div class="Summary">
                                                 <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> if you are planning an individual activity, <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">sole tradership<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>in Polish: jednoosobowa działalność gospodarcza or JDG, is a business activity owned and run by one person, in which there is no legal distinction between the owner and the business entity</span></a> is the simplest and cost-efficient method of running a business in Poland.</p>
                                             </div>
@@ -226,7 +226,7 @@
                                             <ul>
                                                 <li>	a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">sole tradership<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>in Polish: jednoosobowa działalność gospodarcza or JDG, is a business activity owned and run by one person, in which there is no legal distinction between the owner and the business entity</span></a></li>
                                             </ul>
-                                            <p>A legal or a natural person can found the following forms of business:</p>
+                                            <p>A legal or a natural person can found any of the following forms of business:</p>
                                             <table style="width: 100%;mc-table-style: url('../Resources/Stylesheets/Alternate-Row-Color.css');" class="TableStyle-Alternate-Row-Color" cellspacing="21">
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 417px;" />
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 347px;" />
@@ -242,7 +242,7 @@
                                                             <p class="table-text">Jednoosobowa działalność gospodarcza</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1">
-                                                            <p>	Sole trader (self-employment)</p>
+                                                            <p>	Sole tradership (self-employment)</p>
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
