--- a/A-What you need to know/Who can be a sole trader.htm
+++ b/A-What you need to know/Who can be a sole trader.htm
@@ -220,7 +220,7 @@
                                                 <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
                                                 <p>Essentially, every individual can start a business</p>
                                             </div>
-                                            <h2>Freedom of economic activity</h2>
+                                            <h2>Freedom of business activity</h2>
                                             <p style="text-align: justify;">Under the Polish law (<a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000646" target="_blank">The Act of 6 March 2018 on entrepreneurship</a>) everybody has a right to start, run and close a business on equal terms.</p>
                                             <p>Business activity is understood as an organised commercial activity for profit, performed on the entrepreneur’s own behalf and permanently.</p>
                                             <p style="text-align: justify;">In Poland, the following persons can be an entrepreneur:</p>
@@ -237,7 +237,7 @@
                                             </div>
                                             <p>You do not need to be a Polish citizen to start a business as a sole trader. The exact requirements depend on your country of origin. See the information in the table below.</p>
                                             <table style="width: 100%;mc-table-style: url('../Resources/Stylesheets/Alternate-Row-Color.css');" class="TableStyle-Alternate-Row-Color" cellspacing="21">
-                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 362px;" />
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
                                                 <thead>
                                                     <tr class="TableStyle-Alternate-Row-Color-Head-Header1">
@@ -280,7 +280,7 @@
                                             <h3>A minor</h3>
                                             <div class="Summary">
                                                 <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
-                                                <p>if you are a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">minor<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A person under 18 years of age</span></a>, you will need one of your parents to represent you.</p>
+                                                <p>If you are a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">minor<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A person under 18 years of age</span></a>, you will need one of your parents to represent you.</p>
                                             </div>
                                             <p>You can start a business in Poland even if you are a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term4">minor<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A person under 18 years of age</span></a> (you are not 18 years old yet).]</p>
                                             <p>If this is the case, though, you will need to obtain consent or your legal representative (most often your parent or guardian).</p>
@@ -298,8 +298,8 @@
                                             <p>A woman can retire at the age of 60, a man – at the age of 65.</p>
                                             <p>As an old-age pensioner, you can:</p>
                                             <ul>
-                                                <li>•	register a new business</li>
-                                                <li>•	continue the business started before your retirement</li>
+                                                <li>register a new business</li>
+                                                <li>continue the business started before your retirement</li>
                                             </ul>
                                             <p>As an old-age pensioner running your own business, you are not subject to any limits on revenue that would result in reducing your pension entitlement.</p>
                                             <p>The only exception is the so-called <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term3">early retirement<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Early retirement – an old-age entitlement for persons born between 1949 and 1968, who worked under special conditions or performed a specific type of work</span></a>. If this is your case, your retirement pension will be:</p>
