--- a/B-What you need to choose/Accounting.htm
+++ b/B-What you need to choose/Accounting.htm
@@ -270,7 +270,7 @@
                                                             <p class="p_8" style="font-style: normal;font-size: 12pt;">When you chose a tax scale or a flat rate tax</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body2" style="font-size: 12pt;font-weight: normal;">
-                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue does not exceed PLN 2 mln</p>
+                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue does not exceed PLN 2 million</p>
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
@@ -281,7 +281,7 @@
                                                             <p class="p_8" style="font-style: normal;font-size: 12pt;">When you chose a lump-sum tax on registered income</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1" style="font-size: 12pt;font-weight: normal;">
-                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue does not exceed PLN 2 mln</p>
+                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue does not exceed PLN 2 million</p>
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
@@ -292,7 +292,7 @@
                                                             <p class="p_6" style="font-style: normal;font-size: 12pt;">Accounting ledgers</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body2" style="font-size: 12pt;font-weight: normal;" colspan="2">
-                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue exceeds PLN 2 mln</p>
+                                                            <p class="p_6" style="font-style: normal;font-size: 12pt;">Your annual revenue exceeds PLN 2 million</p>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -331,7 +331,7 @@
                                                     <p class="p_4" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;">you generate your monthly tax returns and social security declarations and send them to the relevant offices via your accounting platform</p>
                                                 </li>
                                                 <li class="li_3">
-                                                    <p class="p_4" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;">when necessary, you can ask your account for advice (for an extra fee). </p>
+                                                    <p class="p_4" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;">when necessary, you can ask your accountant for advice (for an extra fee). </p>
                                                     <p class="p_13" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;"> </p>
                                                     <div class="Action">
                                                         <p style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
