--- a/B-What you need to choose/Business address.htm
+++ b/B-What you need to choose/Business address.htm
@@ -256,7 +256,7 @@
                                             <p>&#160;</p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>You are required to provide address for service, that is, the address where all correspondence regarding your business activity will be sent. It can be the address of your permanent residence or any other address where you will collect correspondence.</p>
+                                                <p>You are required to provide a correspondence address, that is, the address where all correspondence regarding your business activity will be sent. It can be the address of your permanent residence or any other address where you will collect correspondence.</p>
                                             </div>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
