--- a/B-What you need to choose/Taxation form.htm
+++ b/B-What you need to choose/Taxation form.htm
@@ -233,7 +233,7 @@
                                             <h3 style="text-align: justify;">Flat-rate tax</h3>
                                             <p style="text-align: justify;">Here you pay tax at the rate of 19% regardless of your income.</p>
                                             <h3 style="text-align: justify;">	Lump-sum tax on registered income</h3>
-                                            <p style="text-align: justify;">This is a simplified form of taxation,  where you pay tax at a specified rate (from 2% to 17%) on your registered income in a given month</p>
+                                            <p style="text-align: justify;">This is a simplified form of taxation,  where you pay tax at a specified rate (from 2% to 17%) on your registered income in a given month.</p>
                                             <div class="Remember">
                                                 <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
                                                 <p>Lump sum on registered income taxation is available for specific types of activity only. For example, this taxation form cannot be applied, when you run a pharmacy, trade in currencies, or sell car parts. Check here for details.</p>
@@ -381,17 +381,8 @@
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body2">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body2" colspan="4">
                                                             <p class="table-text">Can you benefit from tax reliefs?</p>
-                                                        </td>
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body2">
-                                                            <p class="table-text">&#160;</p>
-                                                        </td>
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body2">
-                                                            <p class="table-text">&#160;</p>
-                                                        </td>
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body2">
-                                                            <p class="table-text">&#160;</p>
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
@@ -472,7 +463,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <p>*) <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">PKPiR<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>PKPIR or Podatkowa Księga Przychodów i Rozchodów is a simplified form of accounting for small businesses. You need to register your revenue and costs onl.</span></a> or <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">Podatkowa Księga Przychodów i Rozchodów<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>PKPIR or Podatkowa Księga Przychodów i Rozchodów is a simplified form of accounting for small businesses. You need to register your revenue and costs onl.</span></a> is a simplified form of accounting for small businesses. You need to register your revenue and costs only. It should be kept for each year separately, either on paper or in electronic form.</p>
+                                            <p>*)  <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">Podatkowa Księga Przychodów i Rozchodów<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Podatkowa Księga Przychodów i Rozchodów, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only.</span></a>, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only. It should be kept for each year separately, either on paper or in electronic form.</p>
                                             <p>You can see a template <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544">here.</a></p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
