--- a/B-What you need to choose/VAT.htm
+++ b/B-What you need to choose/VAT.htm
@@ -219,12 +219,12 @@
                                                 <p class="Akapitzlistą_1" style="font-weight: normal;font-size: 12pt;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
                                                 <p class="Akapitzlistą_1" style="font-weight: normal;font-size: 12pt;">You need to check whether you are required to register as a VAT payer. If you are not, you can still choose a voluntary VAT registration.</p>
                                             </div>
-                                            <p class="Akapitzlistą_3" style="text-align: justify;">VAT is&#160; added to the price of a product or a service. It is due irrespective of your income tax and regardless of the taxation form that you chose. As a rule, a business should be registered for VAT.</p>
+                                            <p class="Akapitzlistą_3" style="text-align: justify;">VAT is added to the price of a product or a service. It is due irrespective of your income tax and regardless of the taxation form that you chose. As a rule, a business should be registered for VAT.</p>
                                             <p class="Akapitzlistą_3" style="text-align: justify;">&#160;</p>
                                             <p class="Akapitzlistą_3" style="text-align: justify;">You must be a VAT payer, if you sell the following types of products or services:</p>
                                             <p class="Akapitzlistą_1" style="text-align: justify;">Goods:</p>
                                             <ul>
-                                                <li style="text-align: justify;">goods listed in Annex 12 to the VAT Act (e.g. precious metals and their scrap, jewelery)</li>
+                                                <li style="text-align: justify;">goods listed in Annex 12 to the VAT Act (e.g. precious metals and their scrap, jewelry)</li>
                                                 <li style="text-align: justify;">goods subject to excise tax, with the exception of: electricity, tobacco products and passenger cars other than new ones, that pursuant to the provisions on income tax are classified as fixed assets subject to depreciation</li>
                                                 <li style="text-align: justify;">in certain cases: buildings, structures or parts thereof</li>
                                                 <li style="text-align: justify;">construction sites</li>
