--- a/C-What you need to do/Open a bank account.htm
+++ b/C-What you need to do/Open a bank account.htm
@@ -218,8 +218,7 @@
                                             <p>
                                                 <img src="../Resources/Images/bank_478x225.jpg" style="width: 478;height: 225;" />
                                             </p>
-                                            <h1>Is a bank account required
-?</h1>
+                                            <h1>Is a bank account required?</h1>
                                             <p style="text-align: justify;">When running your business, you can use either a business bank account, or your private bank account. If you choose the second option, though, you must be the only holder of your private account. 
 </p>
                                             <p style="text-align: justify;">There are some transactions that must not be settled in cash. In such cases a bank account is required to effect payment. </p>
@@ -239,7 +238,7 @@
                                             <p style="text-align: justify;">You will need a business bank account (not your private one), if:
 </p>
                                             <ul>
-                                                <li style="text-align: justify;">you are a VAT&#160;payer – only business bank account numbers are pubished in the so-called white list of VAT&#160;payers</li>
+                                                <li style="text-align: justify;">you are a VAT&#160;payer – only business bank account numbers are published in the so-called white list of VAT&#160;payers</li>
                                                 <li style="text-align: justify;">you use the split payment mechanism<![CDATA[
 ]]></li>
                                             </ul>
