--- a/Express path/Access to form.htm
+++ b/Express path/Access to form.htm
@@ -234,7 +234,7 @@
                                                             <li value="1">Go to website <a href="https://www.biznes.gov.pl/pl" target="_blank">Biznes.gov.pl</a></li>
                                                             <li value="2">Click the button "Zarejestruj firmę" (Register your business)<br /><img src="../Resources/Images/access1_555x346.png" style="width: 555;height: 346;" /></li>
                                                             <li value="3">Click the button "Rozpocznij"&#160;(Start)<br /><img src="../Resources/Images/access2_528x256.png" style="width: 528;height: 256;" /></li>
-                                                            <li value="4">You will have two login options:<ul><li>Log in via Login.gov.pl (Zaloguj się przez Login.gov.pl)</li><li>Log in using our e-mail (Zaloguj się przez e-mail}</li></ul></li>
+                                                            <li value="4">You will have two login options:<ul><li>Zaloguj się przez Login.gov.pl (Log in via Login.gov.pl)</li><li>Zaloguj się przez e-mail (Log in using our e-mail)</li></ul></li>
                                                         </ol>
                                                         <p>Choose the one that you want to use.</p>
                                                         <p>
@@ -243,7 +243,7 @@
                                                         </p>
                                                     </div>
                                                 </div>
-                                                <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />If you do not have any of the above methods of confirming your identity, will need to prepare a paper version of your application. Follow these steps:</a></span>
+                                                <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />If you do not have any of the above methods of confirming your identity, you will need to prepare a paper version of your application. Follow these steps:</a></span>
                                                     <div class="MCDropDownBody dropDownBody">
                                                         <ol>
                                                             <li value="1">Go to this <a href="https://zaplecze.biznes.gov.pl/files/document_attachments/2202/CEIDG1_v_211.pdf">page</a></li>
@@ -254,6 +254,10 @@
                                                             <li>print the form and fill it in with a pen</li>
                                                             <li>fill it in the Acrobat, using the "Fill in and sign" function. Then print it. </li>
                                                         </ul>
+                                                        <div class="Remember">
+                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>Do not sign it! &#160;You will need to sign it in the presence of an officer or a notary!</p>
+                                                            <p>&#160;</p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
