--- a/Express path/Fill in form.htm
+++ b/Express path/Fill in form.htm
@@ -224,7 +224,7 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 2 of the registration form - your personal data and your foreigner status</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p>If you are a foreigner, you can use such identity documents as a passport, a temporary ID card, a temporary proof of identity, an identity document issued in your country of origin, a permanent residence card, a tempoary residence card. </p>
+                                                    <p>If you are a foreigner, you can use such identity documents as a passport, a temporary ID card, a temporary proof of identity, an identity document issued in your country of origin, a permanent residence card, a temporary residence card. </p>
                                                     <p>In section 2.2, give the details of your identity document:&#160;its number, the name of the body that issued it, the date of issue.</p>
                                                     <p>You can read more about a foreigner status <a href="../A-What you need to know/Who can be a sole trader.htm">here</a>. </p>
                                                     <p>
@@ -337,7 +337,7 @@
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 21 of the registration form - information about your bank account.</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p>Enter your business bank account number, if you have a business bank account. </p>
-                                                    <p>If not , give your private bank account number. Read more about a bank account <a href="../C-What you need to do/Open a bank account.htm">here</a>.</p>
+                                                    <p>If not, give your private bank account number. Read more about a bank account <a href="../C-What you need to do/Open a bank account.htm">here</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 21.png" />
                                                     </p>
@@ -346,7 +346,7 @@
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in sections 23, 24 and 25 of the registration form</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p>In section 23, indicate if you have any assets that you own jointly with your spouse.</p>
-                                                    <p>In section 24, indicate the form of your business. In the most cases, it will your individual business, so you need to check the first box.</p>
+                                                    <p>In section 24, indicate the form of your business. In the most cases, it will be your individual business, so you need to check the first box.</p>
                                                     <p>In section 25, you should state whether you are a partner in any civil-law partnership.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 23 25.png" />
@@ -369,7 +369,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 28 of the registration form - RODO&#160;information</a></span>
+                                            <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 28 of the registration form - GDPR&#160;information</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p>This section contains information on the processing of your personal data in <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>.</p>
                                                     <p>You should sign and date the application.</p>
