--- a/Who is this guide for/Who is this guide for.htm
+++ b/Who is this guide for/Who is this guide for.htm
@@ -231,10 +231,10 @@
                                                 <li value="4">Being a family member of a UE citizen, i.e.:</li>
                                                 <ul>
                                                     <li>a spouse of a UE citizen</li>
-                                                    <li>a direct descedant (child) of a UE citizen or a UE citzen’s spouse, aged to 21, or a dependant of a EU citizen or a EU citizen’s spouse</li>
-                                                    <li>a direct ascendant (parent) a UE citizen or a UE citzen’s spouse, being a dependant of a EU citizen or a EU citizen’s spouse</li>
+                                                    <li>a direct descedant (child) of a UE citizen or a UE citizen’s spouse, aged to 21, or a dependant of a EU citizen or a EU citizen’s spouse</li>
+                                                    <li>a direct ascendant (parent) a UE citizen or a UE citizen’s spouse, being a dependant of a EU citizen or a EU citizen’s spouse</li>
                                                 </ul>
-                                                <li value="5">Having applied for a permit for a temporary or permanent stay – until a decision issued becomes final and biding</li>
+                                                <li value="5">Having applied for a permit for a temporary or permanent stay – until a decision issued becomes final and binding</li>
                                             </ol>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
